<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/student_home_evaluations"
        android:enabled="true"
        android:orderInCategory="0"
        android:icon="@drawable/ic_evaluation"
        android:title="@string/student_dashboard_pending_evaluations"/>

    <item
        android:id="@+id/student_home_history"
        android:enabled="true"
        android:orderInCategory="1"
        android:icon="@drawable/ic_historical"
        android:title="@string/student_dashboard_evaluation_history"/>

    <item
        android:id="@+id/student_home_profile"
        android:enabled="true"
        android:orderInCategory="2"
        android:icon="@drawable/ic_profile"
        android:title="@string/student_dashboard_profile"/>
</menu>